--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <title>1</title>
 </head>
 <body>
-<h2>Princess</h2><br>
+<h2>Princess</h2> <br>
 <h3>Описание товара</h3>
 <img src="1.jpg"><br>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet modi rerum similique voluptatem? Ad aliquid assumenda
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet modi rerum similique voluptatem? Ad&nbsp;aliquid assumenda
     at, consequuntur cum, dolore doloremque dolorum eligendi eum hic necessitatibus praesentium quam repellat
-    tenetur.</p>
+    tenetur. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab&nbsp;autem eos eum ipsa, libero modi nam nostrum, odit pariatur possimus praesentium qui sed velit? Alias eius eos explicabo qui voluptatibus.</p>
 <h3>Характеристики товара</h3>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad alias asperiores corporis, enim eos exercitationem hic
-    illum ipsum, itaque iure laborum libero maxime modi odit omnis sed ut veniam voluptas!</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad&nbsp;alias asperiores corporis, enim eos exercitationem hic
+    illum ipsum, itaque iure laborum libero maxime modi odit omnis sed ut&nbsp;veniam voluptas!</p>
 <h3>Подробное описание товара</h3>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus amet assumenda atque dignissimos dolore ducimus
     fugiat itaque nam nemo nulla odit provident quas, quibusdam repudiandae similique sunt vitae! Iure, molestiae?</p>
 <hr>
-<p>Все права защищены &copy;</p>
+<footer>Все права защищены &copy;</footer>
 </body>
 </html>
