delete teg <p> and edit typograf

--- a/Katalog.html
+++ b/Katalog.html
@@ -13,11 +13,11 @@
 <hr>
 <h2>Каталог</h2>
 <img src="katalog/1.jpg" alt="ps4 pro" width="190" >
-<p><a href="product/Product1.html" target="_blank">Подробнее о товаре</a></p>
+<p><a href="product/Product1.html" target="_blank">Подробнее о&nbsp;товаре</a></p>
 <img src="katalog/2.jpg" alt="ps4 pro" width="190" >
-<p><a href="product/Product2.html" target="_blank">Подробнее о товаре</a></p>
+<p><a href="product/Product2.html" target="_blank">Подробнее о&nbsp;товаре</a></p>
 <img src="katalog/3.jpg" alt="ps4 pro" width="190" >
-<p><a href="product/Product3.html" target="_blank">Подробнее о товаре</a></p>
+<p><a href="product/Product3.html" target="_blank">Подробнее о&nbsp;товаре</a></p>
 </body>
 <footer>Все права защищены &copy;</footer>
 </html>
