--- a/product/Product1.html
+++ b/product/Product1.html
@@ -12,8 +12,8 @@
 </ul>
 <hr>
 <h2>Характиристики товара</h2>
-<p><img src="../katalog/1.jpg"></p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A assumenda consequatur consequuntur delectus distinctio
+<img src="../katalog/1.jpg">
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A&nbsp;assumenda consequatur consequuntur delectus distinctio
     dolor eos explicabo, fugit illum iure laborum molestiae obcaecati perspiciatis quaerat quibusdam, quo saepe ullam!
     Fugiat. </p>
 <ol>
