--- a/product/Product3.html
+++ b/product/Product3.html
@@ -13,14 +13,14 @@
 <hr>
 <h2>Характиристики товара</h2>
 <img src="../katalog/3.jpg">
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A assumenda consequatur consequuntur delectus distinctio
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A&nbsp;assumenda consequatur consequuntur delectus distinctio
     dolor eos explicabo, fugit illum iure laborum molestiae obcaecati perspiciatis quaerat quibusdam, quo saepe ullam!
     Fugiat. </p>
 <hr>
 <ol>
     <li>Цвет:черный</li>
     <li>Кол-во джостиков:1</li>
-    <li>Гарантия: не предоставляется</li>
+    <li>Гарантия: не&nbsp;предоставляется</li>
 </ol>
 </body>
 <footer>Все права защищены &copy;</footer>
