--- a/contacts.html
+++ b/contacts.html
@@ -16,7 +16,7 @@
     Имя <input type="text" placeholder="Введите имя"><br>
     Email <input type="text" placeholder="Ваш Email"><br>
     Тема <input type="text"><br>
-    <textarea></textarea><br>
+    <textarea></textarea> <br>
     <button type="submit">Отправить</button>
     <button type="reset">Очистить форму</button>
 </form>
@@ -26,7 +26,7 @@
 <p>Email Tralling@gmail.com</p>
 <script type="text/javascript" charset="utf-8" async
         src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ab0916fccd77bcd6dd460fcc0532a79bfc79df6211fec42a15c90b19f98c07d9a&amp;width=500&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
-<p>Наша корпорация предоставляет широкий спектр услуг по доставке товаров из Германии</p>
+<p>Наша корпорация предоставляет широкий спектр услуг по&nbsp;доставке товаров из&nbsp;Германии</p>
 </body>
 <footer>Все права защищены &copy;</footer>
 </html>
