--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 </ul>
 <hr>
 <h2>Tralling incorporated</h2>
-<p>Добро пожаловать в нашу компанию. Наша компания занимается доставкой грузов из Германии.</p>
+<p>Добро пожаловать в&nbsp;нашу компанию. Наша компания занимается доставкой грузов из&nbsp;Германии.</p>
 <hr>
 </body>
 <footer>Все права защищены &copy;</footer>
 </html>
+
 
