fix new blank link and add image link

--- a/product/Product1.html
+++ b/product/Product1.html
@@ -13,7 +13,8 @@
 <hr>
 <h2>Характиристики товара</h2>
 <img src="../katalog/1.jpg">
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A&nbsp;assumenda consequatur consequuntur delectus distinctio
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A&nbsp;assumenda consequatur consequuntur delectus
+    distinctio
     dolor eos explicabo, fugit illum iure laborum molestiae obcaecati perspiciatis quaerat quibusdam, quo saepe ullam!
     Fugiat. </p>
 <ol>
