--- a/Katalog.html
+++ b/Katalog.html
@@ -12,12 +12,12 @@
 </ul>
 <hr>
 <h2>Каталог</h2>
-<img src="katalog/1.jpg" alt="ps4 pro" width="190" >
-<p><a href="product/Product1.html" target="_blank">Подробнее о&nbsp;товаре</a></p>
-<img src="katalog/2.jpg" alt="ps4 pro" width="190" >
-<p><a href="product/Product2.html" target="_blank">Подробнее о&nbsp;товаре</a></p>
-<img src="katalog/3.jpg" alt="ps4 pro" width="190" >
-<p><a href="product/Product3.html" target="_blank">Подробнее о&nbsp;товаре</a></p>
+<a href="product/Product1.html"> <img src="katalog/1.jpg" alt="ps4 pro" width="190"></a>
+<p><a href="product/Product1.html">Подробнее о&nbsp;товаре</a></p>
+<a href="product/Product2.html"> <img src="katalog/2.jpg" alt="ps4 pro" width="190"></a>
+<p><a href="product/Product2.html">Подробнее о&nbsp;товаре</a></p>
+<a href="product/Product3.html"><img src="katalog/3.jpg" alt="ps4 pro" width="190"></a>
+<p><a href="product/Product3.html">Подробнее о&nbsp;товаре</a></p>
 </body>
 <footer>Все права защищены &copy;</footer>
 </html>
