--- a/product/Product2.html
+++ b/product/Product2.html
@@ -12,7 +12,7 @@
 </ul>
 <hr>
 <h2>Характиристики товара</h2>
-<img src="../katalog/2.jpg">
+<a href="../katalog/2.jpg" target="_blank"><img src="../katalog/2.jpg" alt="ps4 pro" width="500"></a>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A&nbsp;assumenda consequatur consequuntur delectus
     distinctio
     dolor eos explicabo, fugit illum iure laborum molestiae obcaecati perspiciatis quaerat quibusdam, quo saepe ullam!
