--- a/contacts.html
+++ b/contacts.html
@@ -24,6 +24,9 @@
 <p>Контактый номер 25-11-13</p>
 <p>Адрес г.Новосибирск ул.Карла Маркса д.15</p>
 <p>Email Tralling@gmail.com</p>
+<p>График работы:</p>
+<p>Будни: 09:00 - 21:00</p>
+<p>Выходные: 11:00 - 20:00</p><br>
 <script type="text/javascript" charset="utf-8" async
         src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ab0916fccd77bcd6dd460fcc0532a79bfc79df6211fec42a15c90b19f98c07d9a&amp;width=500&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
 <p>Наша корпорация предоставляет широкий спектр услуг по&nbsp;доставке товаров из&nbsp;Германии</p>
