--- a/product/Product1.html
+++ b/product/Product1.html
@@ -11,17 +11,18 @@
     <li><a href="../contacts.html">Контакты</a></li>
 </ul>
 <hr>
-<h2>Характиристики товара</h2>
+<h2>PS 4 PRO BLACK 2x</h2>
 <a href="../katalog/1.jpg" target="_blank"><img src="../katalog/1.jpg" alt="ps4 pro" width="500"></a>
+<h3>Описание товара</h3>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A&nbsp;assumenda consequatur consequuntur delectus
     distinctio
     dolor eos explicabo, fugit illum iure laborum molestiae obcaecati perspiciatis quaerat quibusdam, quo saepe ullam!
     Fugiat. </p>
-<ol>
+<ul>
     <li>Цвет:черный</li>
     <li>Кол-во джостиков:2</li>
     <li>Гарантия: предоставляется</li>
-</ol>
+</ul>
 <hr>
 </body>
 <footer>Все права защищены &copy;</footer>
