--- a/product/Product3.html
+++ b/product/Product3.html
@@ -11,18 +11,19 @@
     <li><a href="../contacts.html">Контакты</a></li>
 </ul>
 <hr>
-<h2>Характиристики товара</h2>
+<h2>PS 4 PRO BLACK 1x </h2>
 <a href="../katalog/3.jpg" target="_blank"><img src="../katalog/3.jpg" alt="ps4 pro" width="500"></a>
+<h3>Описание товара</h3>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A&nbsp;assumenda consequatur consequuntur delectus
     distinctio
     dolor eos explicabo, fugit illum iure laborum molestiae obcaecati perspiciatis quaerat quibusdam, quo saepe ullam!
     Fugiat. </p>
 <hr>
-<ol>
+<ul>
     <li>Цвет:черный</li>
     <li>Кол-во джостиков:1</li>
     <li>Гарантия: не&nbsp;предоставляется</li>
-</ol>
+</ul>
 </body>
 <footer>Все права защищены &copy;</footer>
 </html>
