--- a/сatalog.html
+++ b/сatalog.html
@@ -7,16 +7,16 @@
 <body>
 <ul>
     <li><a href="index.html">Главная</a></li>
-    <li><a href="Katalog.html">Каталог</a></li>
+    <li><a href="сatalog.html">Каталог</a></li>
     <li><a href="contacts.html">Контакты</a></li>
 </ul>
 <hr>
 <h2>Каталог</h2>
-<a href="product/Product1.html"> <img src="katalog/1.jpg" alt="ps4 pro" width="190"></a>
+<a href="product/Product1.html"> <img src="сatalog/img/1.jpg" alt="ps4 pro" width="190"></a>
 <p><a href="product/Product1.html">Подробнее о&nbsp;товаре</a></p>
-<a href="product/Product2.html"> <img src="katalog/2.jpg" alt="ps4 pro" width="190"></a>
+<a href="product/Product2.html"> <img src="сatalog/img/2.jpg" alt="ps4 pro" width="190"></a>
 <p><a href="product/Product2.html">Подробнее о&nbsp;товаре</a></p>
-<a href="product/Product3.html"><img src="katalog/3.jpg" alt="ps4 pro" width="190"></a>
+<a href="product/Product3.html"><img src="сatalog/img/3.jpg" alt="ps4 pro" width="190"></a>
 <p><a href="product/Product3.html">Подробнее о&nbsp;товаре</a></p>
 </body>
 <footer>Все права защищены &copy;</footer>
