--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <ul>
     <li><a href="index.html">Главная</a></li>
-    <li><a href="Katalog.html">Каталог</a></li>
+    <li><a href="сatalog.html">Каталог</a></li>
     <li><a href="contacts.html">Контакты</a></li>
 </ul>
 <hr>
