--- a/product/Product1.html
+++ b/product/Product1.html
@@ -7,12 +7,12 @@
 <body>
 <ul>
     <li><a href="../index.html">Главная</a></li>
-    <li><a href="../Katalog.html">Каталог</a></li>
+    <li><a href="../сatalog.html">Каталог</a></li>
     <li><a href="../contacts.html">Контакты</a></li>
 </ul>
 <hr>
 <h2>PS 4 PRO BLACK 2x</h2>
-<a href="../katalog/1.jpg" target="_blank"><img src="../katalog/1.jpg" alt="ps4 pro" width="500"></a>
+<a href="../сatalog/img/1.jpg" target="_blank"><img src="../сatalog/img/1.jpg" alt="ps4 pro" width="500"></a>
 <h3>Описание товара</h3>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A&nbsp;assumenda consequatur consequuntur delectus
     distinctio
