--- a/product/Product2.html
+++ b/product/Product2.html
@@ -1,29 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="../style/style.css">
     <meta charset="UTF-8">
     <title>Tralling inc.</title>
 </head>
 <body>
-<ul>
+<ul class="menu">
     <li><a href="../index.html">Главная</a></li>
     <li><a href="../сatalog.html">Каталог</a></li>
     <li><a href="../contacts.html">Контакты</a></li>
 </ul>
 <hr>
-<h2>PS 4 PRO WHITE</h2>
+<h2>PS 4 PRO White 2x</h2>
 <a href="../сatalog/img/2.jpg" target="_blank"><img src="../сatalog/img/2.jpg" alt="ps4 pro" width="500"></a>
-<h3>Описание товара</h3>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A&nbsp;assumenda consequatur consequuntur delectus
-    distinctio
-    dolor eos explicabo, fugit illum iure laborum molestiae obcaecati perspiciatis quaerat quibusdam, quo saepe ullam!
-    Fugiat. </p>
-<hr>
-<ul>
-    <li>Цвет:белый</li>
-    <li>Кол-во джостиков:1</li>
-    <li>Гарантия: предоставляется</li>
+<h3 class="style-h">Краткое описание товара</h3>
+<p class="style-p-k">Играйте в новейшие игры c необычайной четкостью изображения с 4K*; оттенки кожи становятся теплее,
+    объекты
+    приобретают более реалистичные текстуры, а окружение выглядит непривычно живым.</p>
+<h3 class="style-h">Характеристики</h3>
+<ul class="style-product-list">
+    <li>Память:GDDR5 8 Гб</li>
+    <li>Жесткий диск*:500 Гб, 1 Тб</li>
+    <li>Ввод / Вывод: Сверхскоростной разъем USB (USB 3.1 Gen1) × 2
+        Разъем AUX × 1
+    </li>
+    <li>Сетевые подключения:Ethernet (10BASE-T, 100BASE-TX, 1000BASE-T) × 1
+        IEEE 802.11 a/b/g/n/ac
+        Bluetooth® 4.0
+    </li>
+    <li>Питание:AC 220- 240 B, 50/60 Гц</li>
+    <li>Мощность:Макс. 165 Вт</li>
 </ul>
+<h3 class="style-h"> Подробное описание товара</h3>
+<p class="style-p-p">
+    Многие популярные и лучшие игры для PS4 используют дополнительные возможности PS4 Pro, улучшающие производительность
+    игры.
+    Потрясающее небо над Манхэттеном в игре Человек-Паук, величественные северные горы в God of War, бескрайние равнины
+    в Red Dead Redemption 2, поля сражений в Call of Duty: Black Ops 4 – вы гарантированно проникнитесь атмосферой своих
+    игр, если они отмечены значком «Улучшено для PS4 Pro»**
+    Благодаря телевизорам HDR в совместимых играх для PS4 отображается почти весь спектр цветов, доступный человеческому
+    глазу, что делает окружение невероятно живым и правдоподобным.
+</p>
+<hr>
 </body>
 <footer>Все права защищены &copy;</footer>
 </html>
