--- a/contacts.html
+++ b/contacts.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style/style.css">
     <meta charset="UTF-8">
     <title>Tralling inc.</title>
 </head>
 <body>
-<ul>
+<ul class="menu">
     <li><a href="index.html">Главная</a></li>
     <li><a href="сatalog.html">Каталог</a></li>
     <li><a href="contacts.html">Контакты</a></li>
@@ -13,10 +14,13 @@
 <hr>
 <h2>Напишите нам</h2>
 <form action="#">
-    Имя <input type="text" placeholder="Введите имя"><br>
-    Email <input type="text" placeholder="Ваш Email"><br>
-    Тема <input type="text"><br>
-    <textarea></textarea> <br>
+    Имя <input type="text" class="form-contacts-name" placeholder="Введите имя"><br>
+    <br>
+    Email <input type="text" placeholder="Ваш Email" class="form-contacts-email"><br>
+    <br>
+    Тема <input type="text" class="form-contacts-theme"><br>
+    <br>
+    <textarea class="form-contacts"></textarea> <br>
     <button type="submit">Отправить</button>
     <button type="reset">Очистить форму</button>
 </form>
@@ -31,5 +35,6 @@
         src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ab0916fccd77bcd6dd460fcc0532a79bfc79df6211fec42a15c90b19f98c07d9a&amp;width=500&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
 <p>Наша корпорация предоставляет широкий спектр услуг по&nbsp;доставке товаров из&nbsp;Германии</p>
 </body>
+<hr>
 <footer>Все права защищены &copy;</footer>
 </html>
