--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style/style.css">
     <meta charset="UTF-8">
     <title>Tralling inc.</title>
 </head>
 <body>
-<ul>
+<ul class="menu">
     <li><a href="index.html">Главная</a></li>
     <li><a href="сatalog.html">Каталог</a></li>
     <li><a href="contacts.html">Контакты</a></li>
