--- a/contacts.html
+++ b/contacts.html
@@ -36,5 +36,5 @@
 <p>Наша корпорация предоставляет широкий спектр услуг по&nbsp;доставке товаров из&nbsp;Германии</p>
 </body>
 <hr>
-<footer>Все права защищены &copy;</footer>
+<footer class="style-footer">Все права защищены &copy;</footer>
 </html>
