--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <p>Добро пожаловать в&nbsp;нашу компанию. Наша компания занимается доставкой грузов из&nbsp;Германии.</p>
 <hr>
 </body>
-<footer>Все права защищены &copy;</footer>
+<footer class="style-footer">Все права защищены &copy;</footer>
 </html>
 
 
