--- a/сatalog.html
+++ b/сatalog.html
@@ -20,5 +20,5 @@
 <a href="product/Product3.html"><img src="сatalog/img/3.jpg" alt="ps4 pro" width="190"></a>
 <p><a href="product/Product3.html">Подробнее о&nbsp;товаре</a></p>
 </body>
-<footer>Все права защищены &copy;</footer>
+<footer class="style-footer">Все права защищены &copy;</footer>
 </html>
