--- a/product/Product3.html
+++ b/product/Product3.html
@@ -44,5 +44,5 @@
 </p>
 <hr>
 </body>
-<footer>Все права защищены &copy;</footer>
+<footer class="style-footer">Все права защищены &copy;</footer>
 </html>
