--- a/index.html
+++ b/index.html
@@ -6,17 +6,22 @@
     <title>Tralling inc.</title>
 </head>
 <body>
-<ul class="menu">
-    <li><a href="index.html">Главная</a></li>
-    <li><a href="сatalog.html">Каталог</a></li>
-    <li><a href="contacts.html">Контакты</a></li>
-</ul>
+<div class="header">
+    <img src="style/logo/1.png">
+    <ul class="menu">
+        <li><a href="index.html">Главная</a></li>
+        <li><a href="сatalog.html">Каталог</a></li>
+        <li><a href="contacts.html">Контакты</a></li>
+    </ul>
+</div>
 <hr>
 <h2>Tralling incorporated</h2>
 <p>Добро пожаловать в&nbsp;нашу компанию. Наша компания занимается доставкой грузов из&nbsp;Германии.</p>
 <hr>
+<div>
+    <footer class="style-footer">Все права защищены &copy;</footer>
+</div>
 </body>
-<footer class="style-footer">Все права защищены &copy;</footer>
 </html>
 
 
