--- a/product/Product1.html
+++ b/product/Product1.html
@@ -6,12 +6,15 @@
     <title>Tralling inc.</title>
 </head>
 <body>
-<ul class="menu">
-    <li><a href="../index.html">Главная</a></li>
-    <li><a href="../сatalog.html">Каталог</a></li>
-    <li><a href="../contacts.html">Контакты</a></li>
-</ul>
-<hr>
+<div class="header">
+    <img src="../style/logo/1.png">
+    <ul class="menu">
+        <li><a href="../index.html">Главная</a></li>
+        <li><a href="../сatalog.html">Каталог</a></li>
+        <li><a href="../contacts.html">Контакты</a></li>
+    </ul>
+    <hr>
+</div>
 <h2>PS 4 PRO Black 2x</h2>
 <a href="../сatalog/img/1.jpg" target="_blank"><img src="../сatalog/img/1.jpg" alt="ps4 pro" class="img-product1"></a>
 <h3 class="style-h">Краткое описание товара</h3>
@@ -43,6 +46,8 @@
     глазу, что делает окружение невероятно живым и правдоподобным.
 </p>
 <hr>
+<div>
+    <footer class="style-footer">Все права защищены &copy;</footer>
+</div>
 </body>
-<footer class="style-footer">Все права защищены &copy;</footer>
 </html>
