--- a/contacts.html
+++ b/contacts.html
@@ -6,11 +6,14 @@
     <title>Tralling inc.</title>
 </head>
 <body>
-<ul class="menu">
-    <li><a href="index.html">Главная</a></li>
-    <li><a href="сatalog.html">Каталог</a></li>
-    <li><a href="contacts.html">Контакты</a></li>
-</ul>
+<div class="header">
+    <img src="style/logo/1.png">
+    <ul class="menu">
+        <li><a href="index.html">Главная</a></li>
+        <li><a href="сatalog.html">Каталог</a></li>
+        <li><a href="contacts.html">Контакты</a></li>
+    </ul>
+</div>
 <hr>
 <h2>Напишите нам</h2>
 <form action="#">
@@ -34,7 +37,9 @@
 <script type="text/javascript" charset="utf-8" async
         src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ab0916fccd77bcd6dd460fcc0532a79bfc79df6211fec42a15c90b19f98c07d9a&amp;width=500&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
 <p>Наша корпорация предоставляет широкий спектр услуг по&nbsp;доставке товаров из&nbsp;Германии</p>
-</body>
 <hr>
-<footer class="style-footer">Все права защищены &copy;</footer>
+<div>
+    <footer class="style-footer">Все права защищены &copy;</footer>
+</div>
+</body>
 </html>
