--- a/product/Product2.html
+++ b/product/Product2.html
@@ -6,11 +6,14 @@
     <title>Tralling inc.</title>
 </head>
 <body>
-<ul class="menu">
-    <li><a href="../index.html">Главная</a></li>
-    <li><a href="../сatalog.html">Каталог</a></li>
-    <li><a href="../contacts.html">Контакты</a></li>
-</ul>
+<div class="header">
+    <img src="../style/logo/1.png">
+    <ul class="menu">
+        <li><a href="../index.html">Главная</a></li>
+        <li><a href="../сatalog.html">Каталог</a></li>
+        <li><a href="../contacts.html">Контакты</a></li>
+    </ul>
+</div>
 <hr>
 <h2>PS 4 PRO White 2x</h2>
 <a href="../сatalog/img/2.jpg" target="_blank"><img src="../сatalog/img/2.jpg" alt="ps4 pro" width="500"></a>
@@ -43,6 +46,8 @@
     глазу, что делает окружение невероятно живым и правдоподобным.
 </p>
 <hr>
+<div>
+    <footer class="style-footer">Все права защищены &copy;</footer>
+</div>
 </body>
-<footer class="style-footer">Все права защищены &copy;</footer>
 </html>
