--- a/сatalog.html
+++ b/сatalog.html
@@ -6,11 +6,14 @@
     <title>Tralling inc.</title>
 </head>
 <body>
-<ul class="menu">
-    <li><a href="index.html">Главная</a></li>
-    <li><a href="сatalog.html">Каталог</a></li>
-    <li><a href="contacts.html">Контакты</a></li>
-</ul>
+<div class="header">
+    <img src="style/logo/1.png">
+    <ul class="menu">
+        <li><a href="index.html">Главная</a></li>
+        <li><a href="сatalog.html">Каталог</a></li>
+        <li><a href="contacts.html">Контакты</a></li>
+    </ul>
+</div>
 <hr>
 <h2>Каталог</h2>
 <a href="product/Product1.html"> <img src="сatalog/img/1.jpg" alt="ps4 pro" width="190"></a>
@@ -19,6 +22,9 @@
 <p><a href="product/Product2.html">Подробнее о&nbsp;товаре</a></p>
 <a href="product/Product3.html"><img src="сatalog/img/3.jpg" alt="ps4 pro" width="190"></a>
 <p><a href="product/Product3.html">Подробнее о&nbsp;товаре</a></p>
+<hr>
+<div>
+    <footer class="style-footer">Все права защищены &copy;</footer>
+</div>
 </body>
-<footer class="style-footer">Все права защищены &copy;</footer>
 </html>
