--- a/product/Product1.html
+++ b/product/Product1.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="header">
-    <img src="../style/logo/1.png">
+    <a href="../index.html"><img src="../style/logo/1.png"></a>
     <ul class="menu">
         <li><a href="../index.html">Главная</a></li>
         <li><a href="../сatalog.html">Каталог</a></li>
@@ -22,19 +22,37 @@
     объекты
     приобретают более реалистичные текстуры, а окружение выглядит непривычно живым.</p>
 <h3 class="style-h">Характеристики</h3>
-<ul class="style-product-list">
-    <li>Память:GDDR5 8 Гб</li>
-    <li>Жесткий диск*:500 Гб, 1 Тб</li>
-    <li>Ввод / Вывод: Сверхскоростной разъем USB (USB 3.1 Gen1) × 2
-        Разъем AUX × 1
-    </li>
-    <li>Сетевые подключения:Ethernet (10BASE-T, 100BASE-TX, 1000BASE-T) × 1
-        IEEE 802.11 a/b/g/n/ac
-        Bluetooth® 4.0
-    </li>
-    <li>Питание:AC 220- 240 B, 50/60 Гц</li>
-    <li>Мощность:Макс. 165 Вт</li>
-</ul>
+<div>
+    <table class="main-table-product">
+    <tr>
+        <td>Память:</td>
+        <td>GDDR5 8 Гб</td>
+    </tr>
+    <tr>
+        <td>Жесткий диск*:</td>
+        <td>500 Гб, 1 Тб</td>
+    </tr>
+    <tr>
+        <td>Ввод / Вывод:</td>
+        <td>Сверхскоростной разъем USB (USB 3.1 Gen1) × 2
+            Разъем AUX × 1</td>
+    </tr>
+    <tr>
+        <td>Сетевые подключения:</td>
+        <td>Ethernet (10BASE-T, 100BASE-TX, 1000BASE-T) × 1
+            IEEE 802.11 a/b/g/n/ac
+            Bluetooth® 4.0</td>
+    </tr>
+    <tr>
+        <td>Питание:</td>
+        <td>AC 220- 240 B, 50/60 Гц</td>
+    </tr>
+    <tr>
+        <td>Мощность:</td>
+        <td>Макс. 165 Вт</td>
+    </tr>
+</table>
+</div>
 <h3 class="style-h"> Подробное описание товара</h3>
 <p class="style-p-p">
     Многие популярные и лучшие игры для PS4 используют дополнительные возможности PS4 Pro, улучшающие производительность
