--- a/сatalog.html
+++ b/сatalog.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="header">
-    <img src="style/logo/1.png">
+    <a href="index.html"><img src="style/logo/1.png"></a>
     <ul class="menu">
         <li><a href="index.html">Главная</a></li>
         <li><a href="сatalog.html">Каталог</a></li>
