create second table

--- a/product/Product1.html
+++ b/product/Product1.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="header">
-    <a href="../index.html"><img src="../style/logo/1.png"></a>
+    <a href="../index.html"><img src="../style/logo/1.png" alt="logo"></a>
     <ul class="menu">
         <li><a href="../index.html">Главная</a></li>
         <li><a href="../сatalog.html">Каталог</a></li>
@@ -16,46 +16,50 @@
     <hr>
 </div>
 <h2>PS 4 PRO Black 2x</h2>
-<a href="../сatalog/img/1.jpg" target="_blank"><img src="../сatalog/img/1.jpg" alt="ps4 pro" class="img-product1"></a>
+<a href="../сatalog/img/1.jpg" target="_blank"><img src="../сatalog/img/1.jpg" alt="ps4 pro" class="img-product"></a>
 <h3 class="style-h">Краткое описание товара</h3>
-<p class="style-p-k">Играйте в новейшие игры c необычайной четкостью изображения с 4K*; оттенки кожи становятся теплее,
+<p class="style-p-k"><span class="span-p">И</span>грайте в новейшие игры c необычайной четкостью изображения с 4K*;
+    оттенки кожи становятся теплее,
     объекты
     приобретают более реалистичные текстуры, а окружение выглядит непривычно живым.</p>
 <h3 class="style-h">Характеристики</h3>
 <div>
     <table class="main-table-product">
-    <tr>
-        <td>Память:</td>
-        <td>GDDR5 8 Гб</td>
-    </tr>
-    <tr>
-        <td>Жесткий диск*:</td>
-        <td>500 Гб, 1 Тб</td>
-    </tr>
-    <tr>
-        <td>Ввод / Вывод:</td>
-        <td>Сверхскоростной разъем USB (USB 3.1 Gen1) × 2
-            Разъем AUX × 1</td>
-    </tr>
-    <tr>
-        <td>Сетевые подключения:</td>
-        <td>Ethernet (10BASE-T, 100BASE-TX, 1000BASE-T) × 1
-            IEEE 802.11 a/b/g/n/ac
-            Bluetooth® 4.0</td>
-    </tr>
-    <tr>
-        <td>Питание:</td>
-        <td>AC 220- 240 B, 50/60 Гц</td>
-    </tr>
-    <tr>
-        <td>Мощность:</td>
-        <td>Макс. 165 Вт</td>
-    </tr>
-</table>
+        <tr>
+            <td>Память:</td>
+            <td>GDDR5 8 Гб</td>
+        </tr>
+        <tr>
+            <td>Жесткий диск*:</td>
+            <td>500 Гб, 1 Тб</td>
+        </tr>
+        <tr>
+            <td>Ввод / Вывод:</td>
+            <td>Сверхскоростной разъем USB (USB 3.1 Gen1) × 2
+                Разъем AUX × 1
+            </td>
+        </tr>
+        <tr>
+            <td>Сетевые подключения:</td>
+            <td>Ethernet (10BASE-T, 100BASE-TX, 1000BASE-T) × 1
+                IEEE 802.11 a/b/g/n/ac
+                Bluetooth® 4.0
+            </td>
+        </tr>
+        <tr>
+            <td>Питание:</td>
+            <td>AC 220- 240 B, 50/60 Гц</td>
+        </tr>
+        <tr>
+            <td>Мощность:</td>
+            <td>Макс. 165 Вт</td>
+        </tr>
+    </table>
 </div>
 <h3 class="style-h"> Подробное описание товара</h3>
 <p class="style-p-p">
-    Многие популярные и лучшие игры для PS4 используют дополнительные возможности PS4 Pro, улучшающие производительность
+    <span class="span-p">М</span>ногие популярные и лучшие игры для PS4 используют дополнительные возможности PS4 Pro,
+    улучшающие производительность
     игры.
     Потрясающее небо над Манхэттеном в игре Человек-Паук, величественные северные горы в God of War, бескрайние равнины
     в Red Dead Redemption 2, поля сражений в Call of Duty: Black Ops 4 – вы гарантированно проникнитесь атмосферой своих
@@ -63,6 +67,36 @@
     Благодаря телевизорам HDR в совместимых играх для PS4 отображается почти весь спектр цветов, доступный человеческому
     глазу, что делает окружение невероятно живым и правдоподобным.
 </p>
+<div>
+    <table class="twink-table-product">
+        <tr>
+            <td rowspan="4">1</td>
+            <td class="table-td" colspan="4">2</td>
+        </tr>
+        <tr>
+
+            <td>3</td>
+            <td>4</td>
+            <td>5</td>
+            <td>6</td>
+        </tr>
+        <tr>
+
+            <td>7</td>
+            <td>8</td>
+            <td>9</td>
+            <td>10</td>
+        </tr>
+        <tr>
+
+            <td>11</td>
+            <td>12</td>
+            <td>13</td>
+            <td>14</td>
+        </tr>
+
+    </table>
+</div>
 <hr>
 <div>
     <footer class="style-footer">Все права защищены &copy;</footer>
