--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="header">
-<a href="index.html"><img src="style/logo/1.png"></a>
+<a href="index.html"><img src="style/logo/1.png" alt="logo"></a>
     <ul class="menu">
         <li><a href="index.html">Главная</a></li>
         <li><a href="сatalog.html">Каталог</a></li>
