--- a/product/Product3.html
+++ b/product/Product3.html
@@ -7,37 +7,59 @@
 </head>
 <body>
 <div class="header">
-    <a href="../index.html"><img src="../style/logo/1.png"></a>
+    <a href="../index.html"><img src="../style/logo/1.png" alt="logo"></a>
     <ul class="menu">
         <li><a href="../index.html">Главная</a></li>
         <li><a href="../сatalog.html">Каталог</a></li>
         <li><a href="../contacts.html">Контакты</a></li>
     </ul>
+    <hr>
 </div>
-<hr>
-<h2>PS 4 PRO Black 2x</h2>
-<a href="../сatalog/img/3.jpg" target="_blank"><img src="../сatalog/img/3.jpg" alt="ps4 pro" width="500"></a>
+<h2>PS 4 PRO Black 1x</h2>
+<a href="../сatalog/img/3.jpg" target="_blank"><img src="../сatalog/img/3.jpg" alt="ps4 pro" class="img-product"></a>
 <h3 class="style-h">Краткое описание товара</h3>
-<p class="style-p-k">Играйте в новейшие игры c необычайной четкостью изображения с 4K*; оттенки кожи становятся теплее,
+<p class="style-p-k"><span class="span-p">И</span>грайте в новейшие игры c необычайной четкостью изображения с 4K*;
+    оттенки кожи становятся теплее,
     объекты
     приобретают более реалистичные текстуры, а окружение выглядит непривычно живым.</p>
 <h3 class="style-h">Характеристики</h3>
-<ul class="style-product-list">
-    <li>Память:GDDR5 8 Гб</li>
-    <li>Жесткий диск*:500 Гб, 1 Тб</li>
-    <li>Ввод / Вывод: Сверхскоростной разъем USB (USB 3.1 Gen1) × 2
-        Разъем AUX × 1
-    </li>
-    <li>Сетевые подключения:Ethernet (10BASE-T, 100BASE-TX, 1000BASE-T) × 1
-        IEEE 802.11 a/b/g/n/ac
-        Bluetooth® 4.0
-    </li>
-    <li>Питание:AC 220- 240 B, 50/60 Гц</li>
-    <li>Мощность:Макс. 165 Вт</li>
-</ul>
+<div>
+    <table class="main-table-product">
+        <tr>
+            <td>Память:</td>
+            <td>GDDR5 8 Гб</td>
+        </tr>
+        <tr>
+            <td>Жесткий диск*:</td>
+            <td>500 Гб, 1 Тб</td>
+        </tr>
+        <tr>
+            <td>Ввод / Вывод:</td>
+            <td>Сверхскоростной разъем USB (USB 3.1 Gen1) × 2
+                Разъем AUX × 1
+            </td>
+        </tr>
+        <tr>
+            <td>Сетевые подключения:</td>
+            <td>Ethernet (10BASE-T, 100BASE-TX, 1000BASE-T) × 1
+                IEEE 802.11 a/b/g/n/ac
+                Bluetooth® 4.0
+            </td>
+        </tr>
+        <tr>
+            <td>Питание:</td>
+            <td>AC 220- 240 B, 50/60 Гц</td>
+        </tr>
+        <tr>
+            <td>Мощность:</td>
+            <td>Макс. 165 Вт</td>
+        </tr>
+    </table>
+</div>
 <h3 class="style-h"> Подробное описание товара</h3>
 <p class="style-p-p">
-    Многие популярные и лучшие игры для PS4 используют дополнительные возможности PS4 Pro, улучшающие производительность
+    <span class="span-p">М</span>ногие популярные и лучшие игры для PS4 используют дополнительные возможности PS4 Pro,
+    улучшающие производительность
     игры.
     Потрясающее небо над Манхэттеном в игре Человек-Паук, величественные северные горы в God of War, бескрайние равнины
     в Red Dead Redemption 2, поля сражений в Call of Duty: Black Ops 4 – вы гарантированно проникнитесь атмосферой своих
