create second table

--- a/product/Product3.html
+++ b/product/Product3.html
@@ -67,6 +67,36 @@
     Благодаря телевизорам HDR в совместимых играх для PS4 отображается почти весь спектр цветов, доступный человеческому
     глазу, что делает окружение невероятно живым и правдоподобным.
 </p>
+<div>
+    <table class="twink-table-product">
+        <tr>
+            <td rowspan="4">1</td>
+            <td class="table-td" colspan="4">2</td>
+        </tr>
+        <tr>
+
+            <td>3</td>
+            <td>4</td>
+            <td>5</td>
+            <td>6</td>
+        </tr>
+        <tr>
+
+            <td>7</td>
+            <td>8</td>
+            <td>9</td>
+            <td>10</td>
+        </tr>
+        <tr>
+
+            <td>11</td>
+            <td>12</td>
+            <td>13</td>
+            <td>14</td>
+        </tr>
+
+    </table>
+</div>
 <hr>
 <div>
     <footer class="style-footer">Все права защищены &copy;</footer>
