create second table

--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
         <li><a href="contacts.html">Контакты</a></li>
     </ul>
 </div>
-<hr>
+
 <h2>Tralling incorporated</h2>
 <p>Добро пожаловать в&nbsp;нашу компанию. Наша компания занимается доставкой грузов из&nbsp;Германии.</p>
-<hr>
-<div>
+<div class="style-footer-div">
     <footer class="style-footer">Все права защищены &copy;</footer>
 </div>
 </body>
