--- a/сatalog.html
+++ b/сatalog.html
@@ -14,7 +14,6 @@
         <li><a href="contacts.html">Контакты</a></li>
     </ul>
 </div>
-<hr>
 <h2>Каталог</h2>
 <a href="product/Product1.html"> <img src="сatalog/img/1.jpg" alt="ps4 pro" width="190"></a>
 <p><a href="product/Product1.html">Подробнее о&nbsp;товаре</a></p>
@@ -22,8 +21,7 @@
 <p><a href="product/Product2.html">Подробнее о&nbsp;товаре</a></p>
 <a href="product/Product3.html"><img src="сatalog/img/3.jpg" alt="ps4 pro" width="190"></a>
 <p><a href="product/Product3.html">Подробнее о&nbsp;товаре</a></p>
-<hr>
-<div>
+<div class="style-footer-div">
     <footer class="style-footer">Все права защищены &copy;</footer>
 </div>
 </body>
