--- a/contacts.html
+++ b/contacts.html
@@ -14,7 +14,6 @@
         <li><a href="contacts.html">Контакты</a></li>
     </ul>
 </div>
-<hr>
 <h2>Напишите нам</h2>
 <form action="#">
     Имя <input type="text" class="form-contacts-name" placeholder="Введите имя"><br>
@@ -24,8 +23,8 @@
     Тема <input type="text" class="form-contacts-theme"><br>
     <br>
     <textarea class="form-contacts"></textarea> <br>
-    <button type="submit">Отправить</button>
-    <button type="reset">Очистить форму</button>
+    <button type="submit" class="submit">Отправить</button>
+    <button type="reset" class="reset">Очистить форму</button>
 </form>
 <h2>Адрес</h2>
 <p>Контактый номер 25-11-13</p>
@@ -37,8 +36,7 @@
 <script type="text/javascript" charset="utf-8" async
         src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ab0916fccd77bcd6dd460fcc0532a79bfc79df6211fec42a15c90b19f98c07d9a&amp;width=500&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
 <p>Наша корпорация предоставляет широкий спектр услуг по&nbsp;доставке товаров из&nbsp;Германии</p>
-<hr>
-<div>
+<div class="style-footer-div">
     <footer class="style-footer">Все права защищены &copy;</footer>
 </div>
 </body>
