--- a/product/Product2.html
+++ b/product/Product2.html
@@ -13,7 +13,6 @@
         <li><a href="../сatalog.html">Каталог</a></li>
         <li><a href="../contacts.html">Контакты</a></li>
     </ul>
-    <hr>
 </div>
 <h2>PS 4 PRO White 1x</h2>
 <a href="../сatalog/img/2.jpg" target="_blank"><img src="../сatalog/img/2.jpg" alt="ps4 pro" class="img-product"></a>
@@ -96,8 +95,7 @@
 
     </table>
 </div>
-<hr>
-<div>
+<div class="style-footer-div">
     <footer class="style-footer">Все права защищены &copy;</footer>
 </div>
 </body>
