--- a/сatalog.html
+++ b/сatalog.html
@@ -36,6 +36,18 @@
             <p><a href="product/Product1.html">Подробнее о&nbsp;товаре</a></p>
         </div>
 
+        <div class="catalog-a"><a href="product/Product3.html"> <img src="сatalog/img/3.jpg" alt="ps4 pro" width="190"></a>
+            <p><a href="product/Product1.html">Подробнее о&nbsp;товаре</a></p>
+        </div>
+
+        <div class="catalog-a"><a href="product/Product3.html"> <img src="сatalog/img/3.jpg" alt="ps4 pro" width="190"></a>
+            <p><a href="product/Product1.html">Подробнее о&nbsp;товаре</a></p>
+        </div>
+
+        <div class="catalog-a"><a href="product/Product3.html"> <img src="сatalog/img/3.jpg" alt="ps4 pro" width="190"></a>
+            <p><a href="product/Product1.html">Подробнее о&nbsp;товаре</a></p>
+        </div>
+
     </div>
 
     <div class="style-footer-div">
